--- a/game.html
+++ b/game.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>The Tricky Simpsons Quiz!</title>
 </head>
-<body>
+<body class="game">
     
     <div id="quizgame"></div>
     <button id="submit">Submit Quiz</button>
     <div id="results"></div>
+    
 
 </body>
 </html>
