--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>The Tricky Simpsons Quiz! </title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
-<body>
+<body class="home">
     
 
 <script src="assets/js/script.js"></script>
