--- a/index.html
+++ b/index.html
@@ -6,10 +6,60 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Tricky Simpsons Quiz! </title>
     <link rel="stylesheet" href="assets/css/style.css">
-</head>
+    <!-- Jquery CDN --><script  src="https://code.jquery.com/jquery-3.6.1.js"  integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="  crossorigin="anonymous"></script><!-- end of jquery CDN -->
+    <!-- Boostrap CDN --> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"><!-- End of boostrap CDN -->
+  
 <body class="home">
     
+    <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h2 class="modal-title welcome w-100" id="modalLabel">Welcome to the Tricky Simpsons Quiz!</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h2>Will you be a Lisa?</h2>
+                    <p>Or will you come out as a Homer?</p>
+                    <p class="underline">Take this very tricky quiz to find out!</p>
+                </div>
 
+                <div class="modal-footer">
+                    <a href="game.html" class="btn btn-secondary play align-items-center">PLAY</a>
+                    <button data-bs-target="#modal2" data-bs-toggle="modal" data-bs-dismiss="modal"
+                        class="btn btn-light help">HELP</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal2" aria-hidden="true" aria-labelledby="modalLabel2" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h2 class="modal-title help-title w-100" id="modalLabel2">HELP</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>The aim of the quiz is to test and improve your Simpsons knowledge by answering some quite obscure questions. The questions are mainly from Season 1 to Season 20 (anything past season 15 is rarely worth watching!).</p>
+                </div>
+                <div class="modal-footer">
+                    <a href="game.html" class="btn btn-secondary play">PLAY</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
+    <script>
+        // code to launch modal when window is finished loading
+        $(document).ready(function () {
+            $("#modal").modal('show');
+        });
+    </script>
+  
 <script src="assets/js/script.js"></script>
 </body>
 </html>
