--- a/index.html
+++ b/index.html
@@ -8,9 +8,40 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Jquery CDN --><script  src="https://code.jquery.com/jquery-3.6.1.js"  integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="  crossorigin="anonymous"></script><!-- end of jquery CDN -->
     <!-- Boostrap CDN --> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"><!-- End of boostrap CDN -->
-  
+ 
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico"
+    
+ </head> 
+
 <body class="home">
     
+    <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
+        <div class="d-flex flex-grow-1">
+            <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
+            <a class="navbar-brand" href="./index.html">
+                <img src="./assets/images/simpsons-boat.png">
+            </a>
+            <div class="w-100 text-end">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar7">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+            </div>
+        </div>
+        <div class="collapse navbar-collapse flex-grow-1 text-right justify-content-end" id="myNavbar7">
+            <ul class="navbar-nav mr-auto flex-nowrap">
+                <li class="nav-item">
+                    <a href="./game.html" class="nav-link">Start Quiz</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Help!</a>
+                </li>
+                <li class="nav-item">
+                    <a href="#" class="nav-link">Contact Us</a>
+                </li>
+                </ul>
+        </div>
+    </nav>
+
     <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -49,6 +80,30 @@
         </div>
     </div>
 
+<!-- FOOTER -->
+
+<footer class="container-fluid fixed-bottom bg-transparent">
+    <ul class="footer-list">
+      <li class="footer-item">
+        <a class="footer-link" href="https://www.facebook.com" target="_blank" aria-label="Our Facebook"><i class="fa-brands fa-facebook-f"></i></a>
+      </li>
+      <li class="footer-item">
+        <a class="footer-link" href="https://www.twitter.com" target="_blank" aria-label="Our twitter"><i class="fa-brands fa-twitter"></i></a>
+      </li>
+      <li class="footer-item">
+        <a class="footer-link" href="https://www.instagram.com" target="_blank" aria-label="Our Instagram"><i class="fa-brands fa-instagram"></i></a>
+      </li>
+      <li class="footer-item">
+        <a class="footer-link" href="https://www.youtube.com" target="_blank" aria-label="Our Youtube Page"><i class="fa-brands fa-youtube"></i></a>
+      <li class="footer-item">
+        © Graeme Arthur
+      </li>
+    </ul>
+  </footer>
+
+  <!--/.FOOTER-->
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
@@ -59,7 +114,6 @@
             $("#modal").modal('show');
         });
     </script>
-  
-<script src="assets/js/script.js"></script>
+
 </body>
 </html>
