remove boat icon button, replace with donut item as home button, increase font weighting on modal, increase spacing in navbar links, add favicon to game page

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Jquery CDN --><script  src="https://code.jquery.com/jquery-3.6.1.js"  integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="  crossorigin="anonymous"></script><!-- end of jquery CDN -->
     <!-- Boostrap CDN --> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"><!-- End of boostrap CDN -->
  
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico"
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     
  </head> 
 
@@ -19,7 +19,7 @@
         <div class="d-flex flex-grow-1">
             <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
             <a class="navbar-brand" href="./index.html">
-                <img src="./assets/images/simpsons-boat.png">
+                <img id="donut" src="./assets/images/simpsons-donuto.png">
             </a>
             <div class="w-100 text-end">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar7">
@@ -50,9 +50,10 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <h2>Will you be a Lisa?</h2>
-                    <p>Or will you come out as a Homer?</p>
-                    <p class="underline">Take this very tricky quiz to find out!</p>
+                    <h3>How good is your obscure Simpsons knowledge?</h3>
+                    <br>
+                    <p>15 questions to test a true fan</p>
+                    <p class="underline">Click below to get started!</p>
                 </div>
 
                 <div class="modal-footer">
