--- a/game.html
+++ b/game.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>The Tricky Simpsons Quiz!</title>
+
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+
 </head>
+
 <body class="game">
     
     <div id="quizgame"></div>
