add styling to submit button

--- a/game.html
+++ b/game.html
@@ -14,7 +14,10 @@
 <body class="game">
     
     <div id="quizgame"></div>
-    <button id="submit">Submit Quiz</button>
+    <button class="btn">               
+        <div id="btn_container"><img  src="./assets/images/donut2.png" width="30" height="30"/></div>
+        <span>Submit</span>
+     </button>
     <div id="results"></div>
     
 
