--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <!-- Jquery CDN --><script  src="https://code.jquery.com/jquery-3.6.1.js"  integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="  crossorigin="anonymous"></script><!-- end of jquery CDN -->
     <!-- Boostrap CDN --> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"><!-- End of boostrap CDN -->
- 
+    <!-- Font Awesome CDN --><script src="https://kit.fontawesome.com/d076b91794.js" crossorigin="anonymous"></script> <!-- End of Font Awesome CDN -->
     <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     
  </head> 
@@ -22,12 +22,12 @@
                 <img id="donut" src="./assets/images/simpsons-donuto.png">
             </a>
             <div class="w-100 text-end">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar7">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
         </div>
-        <div class="collapse navbar-collapse flex-grow-1 text-right justify-content-end" id="myNavbar7">
+        <div class="collapse navbar-collapse flex-grow-1 text-right justify-content-end" id="myNavbar">
             <ul class="navbar-nav mr-auto flex-nowrap">
                 <li class="nav-item">
                     <a href="./game.html" class="nav-link">Start Quiz</a>
@@ -83,7 +83,7 @@
 
 <!-- FOOTER -->
 
-<footer class="container-fluid fixed-bottom bg-transparent">
+<footer class="container-fluid fixed-bottom bg-dark">
     <ul class="footer-list">
       <li class="footer-item">
         <a class="footer-link" href="https://www.facebook.com" target="_blank" aria-label="Our Facebook"><i class="fa-brands fa-facebook-f"></i></a>
