start build of quiz, quiz shown on game page, linked js files in html page

--- a/game.html
+++ b/game.html
@@ -14,11 +14,14 @@
 <body class="game">
     
     <div id="quizgame"></div>
-    <button class="btn">               
+    <button class="btn" id="submit">               
         <div id="btn_container"><img  src="./assets/images/donut2.png" width="30" height="30"/></div>
         <span>Submit</span>
      </button>
     <div id="results"></div>
+
+    <script src="/assets/js/questions.js"></script>
+    <script src="/assets/js/script.js"></script>
     
 
 </body>
