update quiz with pagination, update quiz question.js with correct format as not showing any correct answers in quiz, add next and previous buttons to quiz

--- a/game.html
+++ b/game.html
@@ -13,8 +13,18 @@
 
 <body class="game">
     
+    <div class="quiz-container">
     <div id="quizgame"></div>
-    <button class="btn" id="submit">               
+    </div>
+    <button class="btn" id="previous">               
+        <div id="btn_container"><img  src="./assets/images/donut2.png" width="30" height="30"/></div>
+        <span>Previous</span>
+     </button>
+     <button class="btn" id="next">               
+        <div id="btn_container"><img  src="./assets/images/donut2.png" width="30" height="30"/></div>
+        <span>Next</span>
+     </button>
+     <button class="btn" id="submit">               
         <div id="btn_container"><img  src="./assets/images/donut2.png" width="30" height="30"/></div>
         <span>Submit</span>
      </button>
