update to css for responsiveness, minor changes to game

--- a/game.html
+++ b/game.html
@@ -16,6 +16,7 @@
     <div class="quiz-container">
     <div id="quizgame"></div>
     </div>
+    <div id="buttons">
     <button class="btn" id="previous">               
         <div id="btn_container"><img  src="./assets/images/donut2.png" width="30" height="30"/></div>
         <span>Previous</span>
@@ -28,7 +29,8 @@
         <div id="btn_container"><img  src="./assets/images/donut2.png" width="30" height="30"/></div>
         <span>Submit</span>
      </button>
-    <div id="results"></div>
+    </div>
+     <div id="results"></div>
 
     <script src="/assets/js/questions.js"></script>
     <script src="/assets/js/script.js"></script>
