--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
         <div class="d-flex flex-grow-1">
-            <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center brand on mobile --></span>
+            <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center site logo on mobile --></span>
             <a class="navbar-brand" href="./index.html">
                 <img id="donut" src="./assets/images/simpsons-donuto.png">
             </a>
