--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <!-- Jquery CDN --><script  src="https://code.jquery.com/jquery-3.6.1.js"  integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="  crossorigin="anonymous"></script><!-- end of jquery CDN -->
     <!-- Boostrap CDN --> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"><!-- End of boostrap CDN -->
     <!-- Font Awesome CDN --><script src="https://kit.fontawesome.com/d076b91794.js" crossorigin="anonymous"></script> <!-- End of Font Awesome CDN -->
-    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+
+    <!-- to load favicon--> <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
     
  </head> 
 
@@ -17,7 +18,7 @@
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
         <div class="d-flex flex-grow-1">
-            <span class="w-100 d-lg-none d-block"><!-- hidden spacer to center site logo on mobile --></span>
+            <span class="w-100 d-lg-none d-block"></span>
             <a class="navbar-brand" href="./index.html">
                 <img id="donut" src="./assets/images/simpsons-donuto.png">
             </a>
@@ -33,7 +34,7 @@
                     <a href="./game.html" class="nav-link">Start Quiz</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Help!</a>
+                    <a href="./index.html" class="nav-link">Help!</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Contact Us</a>
@@ -105,11 +106,14 @@
   <!--/.FOOTER-->
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js"></script>
-    <script>
+
+   
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+ 
+
+   <script>
         // code to launch modal when window is finished loading
         $(document).ready(function () {
             $("#modal").modal('show');
