--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>The Tricky Simpsons Quiz! </title>
     <link rel="stylesheet" href="assets/css/style.css">
-    <!-- Jquery CDN --><script  src="https://code.jquery.com/jquery-3.6.1.js"  integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI="  crossorigin="anonymous"></script><!-- end of jquery CDN -->
-    <!-- Boostrap CDN --> <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous"><!-- End of boostrap CDN -->
-    <!-- Font Awesome CDN --><script src="https://kit.fontawesome.com/d076b91794.js" crossorigin="anonymous"></script> <!-- End of Font Awesome CDN -->
+    <!-- Jquery CDN -->
+    <script src="https://code.jquery.com/jquery-3.6.1.js"
+        integrity="sha256-3zlB5s2uwoUzrXK3BT7AX3FyvojsraNFxCc2vC/7pNI=" crossorigin="anonymous"></script>
+    <!-- end of jquery CDN -->
+    <!-- Boostrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <!-- End of boostrap CDN -->
+    <!-- Font Awesome CDN -->
+    <script src="https://kit.fontawesome.com/d076b91794.js" crossorigin="anonymous"></script>
+    <!-- End of Font Awesome CDN -->
 
-    <!-- to load favicon--> <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
-    
- </head> 
+    <!-- to load favicon-->
+    <link rel="icon" type="image/x-icon" href="./assets/images/favicon.ico">
+
+</head>
 
 <body class="home">
-    
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
         <div class="d-flex flex-grow-1">
             <span class="w-100 d-lg-none d-block"></span>
@@ -39,7 +49,7 @@
                 <li class="nav-item">
                     <a href="#" class="nav-link">Contact Us</a>
                 </li>
-                </ul>
+            </ul>
         </div>
     </nav>
 
@@ -73,7 +83,9 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>The aim of the quiz is to test and improve your Simpsons knowledge by answering some quite obscure questions. The questions are mainly from Season 1 to Season 20 (anything past season 15 is rarely worth watching!).</p>
+                    <p>The aim of the quiz is to test and improve your Simpsons knowledge by answering some quite
+                        obscure questions. The questions are mainly from Season 1 to Season 20 (anything past season 15
+                        is rarely worth watching!).</p>
                 </div>
                 <div class="modal-footer">
                     <a href="game.html" class="btn btn-secondary play">PLAY</a>
@@ -82,38 +94,42 @@
         </div>
     </div>
 
-<!-- FOOTER -->
+    <!-- FOOTER -->
 
-<footer class="container-fluid fixed-bottom bg-dark">
-    <ul class="footer-list">
-      <li class="footer-item">
-        <a class="footer-link" href="https://www.facebook.com" target="_blank" aria-label="Our Facebook"><i class="fa-brands fa-facebook-f"></i></a>
-      </li>
-      <li class="footer-item">
-        <a class="footer-link" href="https://www.twitter.com" target="_blank" aria-label="Our twitter"><i class="fa-brands fa-twitter"></i></a>
-      </li>
-      <li class="footer-item">
-        <a class="footer-link" href="https://www.instagram.com" target="_blank" aria-label="Our Instagram"><i class="fa-brands fa-instagram"></i></a>
-      </li>
-      <li class="footer-item">
-        <a class="footer-link" href="https://www.youtube.com" target="_blank" aria-label="Our Youtube Page"><i class="fa-brands fa-youtube"></i></a>
-      <li class="footer-item">
-        © Graeme Arthur
-      </li>
-    </ul>
-  </footer>
+    <footer class="container-fluid fixed-bottom bg-dark">
+        <ul class="footer-list">
+            <li class="footer-item">
+                <a class="footer-link" href="https://www.facebook.com" target="_blank" aria-label="Our Facebook"><i
+                        class="fa-brands fa-facebook-f"></i></a>
+            </li>
+            <li class="footer-item">
+                <a class="footer-link" href="https://www.twitter.com" target="_blank" aria-label="Our twitter"><i
+                        class="fa-brands fa-twitter"></i></a>
+            </li>
+            <li class="footer-item">
+                <a class="footer-link" href="https://www.instagram.com" target="_blank" aria-label="Our Instagram"><i
+                        class="fa-brands fa-instagram"></i></a>
+            </li>
+            <li class="footer-item">
+                <a class="footer-link" href="https://www.youtube.com" target="_blank" aria-label="Our Youtube Page"><i
+                        class="fa-brands fa-youtube"></i></a>
+            <li class="footer-item">
+                © Graeme Arthur
+            </li>
+        </ul>
+    </footer>
 
-  <!--/.FOOTER-->
+    <!--/.FOOTER-->
 
 
 
-   
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-    crossorigin="anonymous"></script>
- 
 
-   <script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
+    </script>
+
+
+    <script>
         // code to launch modal when window is finished loading
         $(document).ready(function () {
             $("#modal").modal('show');
@@ -121,4 +137,5 @@
     </script>
 
 </body>
+
 </html>
