--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 </head>
 
 <body class="home">
-
+<!--bootstrap navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
         <div class="d-flex flex-grow-1">
             <span class="w-100 d-lg-none d-block"></span>
@@ -44,7 +44,9 @@
                     <a href="./game.html" class="nav-link">Start Quiz</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./index.html" class="nav-link">Help!</a>
+                    <!--Re-opens the modal on the "help" page to decrease the users need to navigate further for help-->
+                    <a href="./index.html" class="nav-link" data-bs-target="#modal2" data-bs-toggle="modal"
+                    data-bs-dismiss="modal">Help!</a>
                 </li>
                 <li class="nav-item">
                     <a href="#" class="nav-link">Contact Us</a>
@@ -52,7 +54,7 @@
             </ul>
         </div>
     </nav>
-
+<!-- Bootstrap Modal-->
     <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
