javascript not loading on deployed page, updated links

--- a/game.html
+++ b/game.html
@@ -41,8 +41,8 @@
 
     <a id='return-btn1' href="index.html">Quit Game</a>
 
-    <script src="/assets/js/questions.js"></script>
-    <script src="/assets/js/script.js"></script>
+    <script src=".assets/js/questions.js"></script>
+    <script src=".assets/js/script.js"></script>
 
 
 </body>
