--- a/game.html
+++ b/game.html
@@ -29,17 +29,19 @@
                 <div id="btn_container"><img src="./assets/images/donut2.png" width="30" height="30" /></div>
                 <span>Next</span>
             </button>
+            <div id="score-table">
+                <p id="right_answer_table">Correct answers: <span id="correct_answers">0</span></p>
+                <p id="incorrect_answer_table">Incorrect answers: <span id="incorrect_answers">0</span></p>
+            </div>
+            <div> <a id='return-btn1' href="index.html">Quit Game</a>
+        </div>
         </div>
 
-        <div id="score-table">
-            <p id="right_answer_table">Correct answers: <span id="correct_answers">0</span></p>
-            <p id="incorrect_answer_table">Incorrect answers: <span id="incorrect_answers">0</span></p>
-
-        </div>
+        
     </div>
     </div>
 
-    <a id='return-btn1' href="index.html">Quit Game</a>
+    
 
     <script src="./assets/js/questions.js"></script>
     <script src="./assets/js/script.js"></script>
