removal of unrequired npm packages and tests

--- a/game.html
+++ b/game.html
@@ -43,8 +43,8 @@
 
     
 
-    <script src="./assets/js/questions.js"></script>
-    <script src="./assets/js/script.js"></script>
+   <script src="./assets/js/questions.js"></script>
+    <script type="module" script src="./assets/js/script.js"></script>
 
 
 </body>
