--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <img id="donut" src="./assets/images/simpsons-donuto.png">
             </a>
             <div class="w-100 text-end">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#myNavbar">
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
             </div>
@@ -49,7 +49,7 @@
                     data-bs-dismiss="modal">Help!</a>
                 </li>
                 <li class="nav-item">
-                    <a href="#" class="nav-link">Contact Us</a>
+                    <a href="./index.html" class="nav-link"  data-bs-target="#modal3" data-bs-toggle="modal">Contact Us</a>
                 </li>
             </ul>
         </div>
@@ -86,11 +86,56 @@
                 </div>
                 <div class="modal-body">
                     <p>The aim of the quiz is to test and improve your Simpsons knowledge by answering some quite
-                        obscure questions. The questions are mainly from Season 1 to Season 20 (anything past season 15
-                        is rarely worth watching!).</p>
+                        obscure questions. The questions are based mainly on trivia from Season 1 to Season 20. We hope you enjoy it!</p>
                 </div>
                 <div class="modal-footer">
                     <a href="game.html" class="btn btn-secondary play">PLAY</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="modal3" aria-hidden="true" aria-labelledby="modalLabel3" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header text-center">
+                    <h2 class="modal-title help-title w-100" id="modalLabel3">Contact Us</h2>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="contact_form" name="contact_form" action="thanks.html">
+                        <div class="mb-5 row">
+                            <div class="col">
+                                <label>First Name</label>
+                                <input type="text" required maxlength="50" class="form-control" id="first_name" name="first_name">
+                            </div>
+                            <div class="col">
+                                <label>Last Name</label>
+                                <input type="text" required maxlength="50" class="form-control" id="last_name" name="last_name">
+                            </div>
+                        </div>
+                        <div class="mb-5 row">
+                            <div class="col">
+                                <label for="email_addr">Email address</label>
+                                <input type="email" required maxlength="50" class="form-control" id="email_addr" name="email"
+                                    placeholder="name@example.com">
+                            </div>
+                            <div class="col">
+                                <label for="phone_input">Phone</label>
+                                <input type="tel" required maxlength="50" class="form-control" id="phone_input" name="Phone"
+                                    placeholder="Phone">
+                            </div>
+                        </div>
+                        <div class="mb-5">
+                            <label for="message">Message</label>
+                            <textarea class="form-control" id="message" name="message" rows="5"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary px-4 btn-lg">Send</button>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <a href="game.html" class="btn btn-secondary play align-items-center">PLAY</a>
+                    <button data-bs-target="#modal2" data-bs-toggle="modal" data-bs-dismiss="modal"
+                        class="btn btn-light help">HELP</button>
                 </div>
             </div>
         </div>
@@ -125,7 +170,7 @@
 
 
 
-
+<!--Bootstrap JS link-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
