updates to readme file

--- a/game.html
+++ b/game.html
@@ -26,7 +26,7 @@
                 </ul>
             </div>
             <button class="btn" id="next-question" button type="button">
-                <div id="btn_container"><img src="./assets/images/donut2.png" width="30" height="30" /></div>
+                <div id="btn_container"><img src="./assets/images/donut2.png" width="30" height="30" alt="simpsons donut image"/></div>
                 <span>Next</span>
             </button>
             <div id="score-table">
@@ -36,16 +36,10 @@
             <div> <a id='return-btn1' href="index.html">Quit Game</a>
         </div>
         </div>
-
-        
-    </div>
+   </div>
     </div>
 
-    
-
-   <script src="./assets/js/questions.js"></script>
-    <script type="module" script src="./assets/js/script.js"></script>
-
+<script type="module" script src="./assets/js/script.js"></script>
 
 </body>
 
