--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <div class="d-flex flex-grow-1">
             <span class="w-100 d-lg-none d-block"></span>
             <a class="navbar-brand" href="./index.html">
-                <img id="donut" src="./assets/images/simpsons-donuto.png">
+                <img id="donut" src="./assets/images/simpsons-donuto.png" alt ="simpsons donut image">
             </a>
             <div class="w-100 text-end">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar">
