updates to readme and some media query fixes

--- a/game.html
+++ b/game.html
@@ -26,7 +26,8 @@
                 </ul>
             </div>
             <button class="btn" id="next-question" button type="button">
-                <div id="btn_container"><img src="./assets/images/donut2.png" width="30" height="30" alt="simpsons donut image"/></div>
+                <div id="btn_container"><img src="./assets/images/donut2.png" width="30" height="30"
+                        alt="simpsons donut image" /></div>
                 <span>Next</span>
             </button>
             <div id="score-table">
@@ -34,12 +35,12 @@
                 <p id="incorrect_answer_table">Incorrect answers: <span id="incorrect_answers">0</span></p>
             </div>
             <div> <a id='return-btn1' href="index.html">Quit Game</a>
+            </div>
         </div>
-        </div>
-   </div>
+    </div>
     </div>
 
-<script type="module" script src="./assets/js/script.js"></script>
+    <script type="module" script src="./assets/js/script.js"></script>
 
 </body>
 
