--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 </head>
 
 <body class="home">
-<!--bootstrap navbar-->
+    <!--bootstrap navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
         <div class="d-flex flex-grow-1">
             <span class="w-100 d-lg-none d-block"></span>
             <a class="navbar-brand" href="./index.html">
-                <img id="donut" src="./assets/images/simpsons-donuto.png" alt ="simpsons donut image">
+                <img id="donut" src="./assets/images/simpsons-donuto.png" alt="simpsons donut image">
             </a>
             <div class="w-100 text-end">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#myNavbar">
@@ -46,15 +46,16 @@
                 <li class="nav-item">
                     <!--Re-opens the modal on the "help" page to decrease the users need to navigate further for help-->
                     <a href="./index.html" class="nav-link" data-bs-target="#modal2" data-bs-toggle="modal"
-                    data-bs-dismiss="modal">Help!</a>
+                        data-bs-dismiss="modal">Help!</a>
                 </li>
                 <li class="nav-item">
-                    <a href="./index.html" class="nav-link"  data-bs-target="#modal3" data-bs-toggle="modal">Contact Us</a>
+                    <a href="./index.html" class="nav-link" data-bs-target="#modal3" data-bs-toggle="modal">Contact
+                        Us</a>
                 </li>
             </ul>
         </div>
     </nav>
-<!-- Bootstrap Modal-->
+    <!-- Bootstrap Modal-->
     <div class="modal fade" id="modal" tabindex="-1" aria-labelledby="modalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
@@ -86,7 +87,8 @@
                 </div>
                 <div class="modal-body">
                     <p>The aim of the quiz is to test and improve your Simpsons knowledge by answering some quite
-                        obscure questions. The questions are based mainly on trivia from Season 1 to Season 20. We hope you enjoy it!</p>
+                        obscure questions. The questions are based mainly on trivia from Season 1 to Season 20. We hope
+                        you enjoy it!</p>
                 </div>
                 <div class="modal-footer">
                     <a href="game.html" class="btn btn-secondary play">PLAY</a>
@@ -106,23 +108,25 @@
                         <div class="mb-5 row">
                             <div class="col">
                                 <label>First Name</label>
-                                <input type="text" required maxlength="50" class="form-control" id="first_name" name="first_name">
+                                <input type="text" required maxlength="50" class="form-control" id="first_name"
+                                    name="first_name">
                             </div>
                             <div class="col">
                                 <label>Last Name</label>
-                                <input type="text" required maxlength="50" class="form-control" id="last_name" name="last_name">
+                                <input type="text" required maxlength="50" class="form-control" id="last_name"
+                                    name="last_name">
                             </div>
                         </div>
                         <div class="mb-5 row">
                             <div class="col">
                                 <label for="email_addr">Email address</label>
-                                <input type="email" required maxlength="50" class="form-control" id="email_addr" name="email"
-                                    placeholder="name@example.com">
+                                <input type="email" required maxlength="50" class="form-control" id="email_addr"
+                                    name="email" placeholder="name@example.com">
                             </div>
                             <div class="col">
                                 <label for="phone_input">Phone</label>
-                                <input type="tel" required maxlength="50" class="form-control" id="phone_input" name="Phone"
-                                    placeholder="Phone">
+                                <input type="tel" required maxlength="50" class="form-control" id="phone_input"
+                                    name="Phone" placeholder="Phone">
                             </div>
                         </div>
                         <div class="mb-5">
@@ -142,7 +146,6 @@
     </div>
 
     <!-- FOOTER -->
-
     <footer class="container-fluid fixed-bottom bg-dark">
         <ul class="footer-list">
             <li class="footer-item">
@@ -168,13 +171,10 @@
 
     <!--/.FOOTER-->
 
-
-
-<!--Bootstrap JS link-->
+    <!--Bootstrap JS link-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous">
     </script>
-
 
     <script>
         // code to launch modal when window is finished loading
